[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["web-programming::http-server"]
description = "A RegexSet based path router for Hyper 0.11"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "reset-router"
readme = "README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.4.0"

[dependencies]
failure = "0.1.1"
futures = "0.1.20"
http = "0.1.5"
regex = "0.2.10"
tokio-service = "0.1.0"

[dependencies.hyper]
features = ["compat"]
version = "0.11.24"
