[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["web-programming::http-server"]
description = "A RegexSet based path router for Hyper 0.11"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "reset-router"
readme = "README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.4.1"

[dependencies]
failure = "0.1.2"
http = "0.1"
hyper = "0.12"
futures = "0.1"
regex = "1.0.5"
