[package]
name = "reset-recognizer"
authors = ["Jacob Brown <kardeiz@gmail.com>"]
edition = "2018"
description = "A RegexSet based route recognizer"
keywords = ["router", "regexset"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.7.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
bytes = "0.4.12"
owning_ref = "0.4.0"
