[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["web-programming::http-server"]
description = "Proc macros for reset-router"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "reset-router-macros"
readme = "../README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.6.1"

[dependencies]
proc-macro-hack = "0.5.2"
proc-macro2 = "0.4.24"
quote = "0.6.10"

[dependencies.syn]
features = ["full", "extra-traits"]
version = "0.15.18"

[lib]
proc-macro = true
