[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["web-programming::http-server"]
description = "A RegexSet based path router for Hyper"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "reset-router"
readme = "../README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.6.5"
edition = "2018"

[dependencies]
bitflags = "1"
futures = "0.1"
http = "0.1"
hyper = "0.12"
proc-macro-hack = { version = "0.5.2", optional = true }
regex = "1"

[features]
default = ["with-macros"]
with-macros = ["reset-router-macros", "proc-macro-hack"]

[dependencies.reset-router-macros]
path = "../reset-router-macros"
version = "0.6"
optional = true
