[package]
authors = ["Jacob Brown <kardeiz@gmail.com>"]
categories = ["web-programming::http-server"]
description = "A RegexSet based path router for Hyper"
keywords = ["hyper", "router", "regexset"]
license = "MIT"
name = "reset-router"
readme = "../README.md"
repository = "https://github.com/kardeiz/reset-router"
version = "0.8.0"
edition = "2018"

[dependencies]
futures = "0.3"
http = "0.2"
hyper = "0.13"
type-map = "0.2.0"
tower = "0.3.0"

[dependencies.reset-recognizer]
path = "../reset-recognizer"
version = "0.8"

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }
